--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Welcome to Gomix!</title>
-    <meta name="description" content="A cool thing made with Gomix">
-    <!-- <link id="favicon" rel="icon" href="https://gomix.com/favicon-app.ico" type="image/x-icon"> -->
+    <title>SB4 Statements</title>
+    <meta name="description" content="A collection of public statements against TX SB4">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
