Bigger call to action

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,8 +6,7 @@
 
 <p>This project seeks to collect statements from public officials, lawyers, community organizers and law enforcement regarding SB4.</p>
 
-<p>Submit a statement by filling out <a href="https://docs.google.com/forms/d/e/1FAIpQLSdJv9HgZCElUfOFytCG1DwVyYGxSuOl6F9Oxn3HtQD1ml5yug/viewform">this form</a></p>
-<p>Have a question or comment? Fill out <a href="https://docs.google.com/forms/d/e/1FAIpQLSeTQyoU6sy-UJYBOiPDNVQICc9mWcTTF8TsoEg93bUYihAmEA/viewform">this form</a> and we'll get back to you</p>
+<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSdJv9HgZCElUfOFytCG1DwVyYGxSuOl6F9Oxn3HtQD1ml5yug/viewform" class="btn btn-primary">Submit a statement</a> <a href="https://docs.google.com/forms/d/e/1FAIpQLSeTQyoU6sy-UJYBOiPDNVQICc9mWcTTF8TsoEg93bUYihAmEA/viewform" class="btn btn-default">Question or Comment</a></p>
 
 <form id="filter_form">
 <label>Filter Statements by Role</label> 
